--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "story_shuffler"
-version = "0.1.0"
+version = "1.0.0"
 authors = ["Todd L Smith <todd@availlang.org>"]
 edition = "2021"
 rust-version = "1.68"
@@ -16,6 +16,7 @@ eframe = { version = "0.21.3", default-features = false, features = [
     "persistence",   # Enable restoring app state when restarting the app.
 ] }
 petgraph = "0.6.3"
+rand = "0.8.5"
 regex = "1.7.3"
 serde = { version = "1.0.158", features = ["derive"] }
 
@@ -26,6 +27,7 @@ tracing-subscriber = "0.3"
 # Web dependencies.
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 console_error_panic_hook = "0.1.6"
+getrandom = { version = "0.2.8", features = ["js"] }
 tracing-wasm = "0.2"
 wasm-bindgen-futures = "0.4"
 
