--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,11 @@ rust-version = "1.65"
 color-hex = "0.2.0"
 egui = { version = "0.21.0", features = ["color-hex", "persistence"] }
 eframe = { version = "0.21.3", default-features = false, features = [
-    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
-    "default_fonts", # Embed the default egui fonts.
-    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
-    "persistence",   # Enable restoring app state when restarting the app.
+    # Make egui comptaible with screen readers.
+    "accesskit",
+    "default_fonts",
+    "glow",
+    "persistence"
 ] }
 petgraph = "0.6.3"
 rand = "0.8.5"
